张煜东第三次修改，屏幕宽度无法铺满

--- a/vue_client/index.html
+++ b/vue_client/index.html
@@ -10,4 +10,19 @@
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
+
+  <style>
+    html,body,#app{
+      height:100%;
+      width: 100%;
+      margin: 0px;
+      padding: 0px;
+      position: absolute;
+    }
+    .main{
+      height:100%;
+      width: 100%;
+    }
+  </style>
+
 </html>
